--- a/Tugas1.html
+++ b/Tugas1.html
@@ -7,6 +7,8 @@
     <title>Tugas 1</title>
   </head>
   <body>
-    <h1>Hello Cia</h1>
+    <h1>Welcome to Sanata Dharma</h1>
+    <img src="assets/image/usd.png" width="200" height="200" />
+    <p>Selamat datang di Universitas Sanata Dharma</p>
   </body>
 </html>
