--- a/Tugas1.html
+++ b/Tugas1.html
@@ -8,8 +8,10 @@
     <title>Tugas 1</title>
   </head>
   <body>
-    <h1>Welcome to Sanata Dharma</h1>
-    <img src="assets/image/usd.png" width="200" height="200" />
-    <p>Selamat datang di Universitas Sanata Dharma</p>
+    <header>
+      <img src="assets/image/usd.png" width="200" height="200" />
+      <h1>Belajar HTML Dasar</h1>
+      <p>Selamat datang di Universitas Sanata Dharma</p>
+    </header>
   </body>
 </html>
