Menambahkan gambar, dan beberapa element lainnya

--- a/Tugas1.html
+++ b/Tugas1.html
@@ -9,9 +9,128 @@
   </head>
   <body>
     <header>
-      <img src="assets/image/usd.png" width="200" height="200" />
-      <h1>Belajar HTML Dasar</h1>
-      <p>Selamat datang di Universitas Sanata Dharma</p>
+      <img
+        src="assets/image/usd.png"
+        width="150"
+        height="150"
+        style="display: block; margin: auto"
+      />
+      <h1 style="text-align: center">Belajar HTML Dasar</h1>
+      <h2 style="text-align: center">
+        Selamat datang di Universitas Sanata Dharma
+      </h2>
+      <h2 style="text-align: center">Curriculum Vitae</h2>
+      <nav>
+        <ul>
+          <li><a href="#pendidikan">Pendidikan</a></li>
+          <li><a href="#pengalaman organisasi">Pengalaman Organisasi</a></li>
+          <li><a href="#hobi">Hobi</a></li>
+          <li><a href="#keterampilan">Keterampilan</a></li>
+        </ul>
+      </nav>
     </header>
+
+    <aside>
+      <article class="">
+        <header>
+          <h2>Biodata</h2>
+          <figure>
+            <img src="assets/image/Cia.JPG" width="200" height="260">
+          </figure>
+        </header>
+        <section>
+          <table>
+            <tr>
+              <th>Nama : </th>
+              <td>Alfrina Gracia Pramesti</td>
+            </tr>
+  
+            <tr>
+              <th>Tempat Tanggal Lahir : </th>
+              <td>Palu, 29 April 2003</td>
+            </tr>
+  
+            <tr>
+              <th>E-mail : </th>
+              <td>alfrina.g.p@gmail.com</td>
+            </tr>
+  
+            <tr>
+              <th>WhatsApp : </th>
+              <td>082396001729</td>
+            </tr>
+          </table>
+        </section>
+      </article>
+    </aside>
+  
+    <main>
+      <div id="content">
+        <article id="pendidikan">
+          <h2>Pendidikan</h2>
+          <p>Berikut ini Pendidikan yang di tempuh</p>
+          <nav>
+            <ol>
+              <li>
+                Sarjana Informatika Universitas Sanata Dharma, Yogyakarta 2020 -
+                sekarang
+              </li>
+              <li>SMA Kristen GPID Sumbersari, Sulawesi Tengah 2017 - 2020</li>
+              <li>SMP Kristen GPID Sumbersari, Sulawesi Tengah 2014 - 2017</li>
+              <li>SDN Kecil Tokasa, Torue, 2008 - 2014</li>
+            </ol>
+          </nav>
+        </article>
+  
+        <article id="pengalaman organisasi"></article>
+        <h2>Pengalaman Organisasi</h2>
+        <nav>
+          <ul>
+            <li>
+              Staff Kementerian Riset dan Pengembangan Internal, Badan Eksekutif
+              Mahasiswa Universitas Sanata Dharma (Januari 2022 - sekarang)
+            </li>
+            <li>
+              Staff Departement Kaderisasi, Himpunan Mahasiswa Informatika,
+              Universitas Sanata Dharma (Januari 2021 - November 2021)
+            </li>
+            <li>
+              Bendahara OSIS Sekolah Menengah Atas, SMA Kristen GPID Sumbersari
+              (Juli 2019 - April 2020)
+            </li>
+          </ul>
+        </nav>
+        </article>
+  
+        <article id="hobi">
+          <h2>Hobi</h2>
+          <nav>
+            <ul>
+              <li>Memasak</li>
+              <li>Membaca</li>
+              <li>Menonton Drama China</li>
+            </ul>
+          </nav>
+        </article>
+  
+        <article id="keterampilan">
+          <h2>Keterampilan</h2>
+          <nav>
+            <ul>
+              <li>Teliti dalam mengerjakan dan menyelesaikan tugas yang diberikan</li>
+              <li>Keterampilan memecahkan masalah dan keinginan untuk belajar yang tinggi</li>
+              <li>Keterampilan komunikasi interpersonal</li>
+              <li>Kepemimpinan manajemen waktu, dan kolaborasi</li>
+              <li>Microsoft Office (Word, Excel, PowerPoint)</li>
+            </ul>
+          </nav>
+        </article>
+  
+      </div>
+    </main>
+    <footer>
+      <p>Belajar HTML Dasar, Pemrograman Berbasis Platform</p>
+    </footer>
+  </body>
   </body>
 </html>
