modified:   Tugas1.html deleted:    assets/styles.css

--- a/Tugas1.html
+++ b/Tugas1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tugas 1</title>
   </head>
-  <body>
+  <body style="background-color: #069A8E;">
     <header>
       <img
         src="assets/image/usd.png"
@@ -19,55 +19,59 @@
       <h2 style="text-align: center">
         Selamat datang di Universitas Sanata Dharma
       </h2>
-      <h2 style="text-align: center">Curriculum Vitae</h2>
-      <nav>
-        <ul>
-          <li><a href="#pendidikan">Pendidikan</a></li>
-          <li><a href="#pengalaman organisasi">Pengalaman Organisasi</a></li>
-          <li><a href="#hobi">Hobi</a></li>
-          <li><a href="#keterampilan">Keterampilan</a></li>
-        </ul>
-      </nav>
+      <h1 style="text-align: center">Curriculum Vitae</h1>
     </header>
 
     <aside>
       <article class="">
         <header>
-          <h2>Biodata</h2>
+          <h2 style="background-color: #005555; padding: 5px; text-align: center;"">Biodata</h2>
           <figure>
-            <img src="assets/image/Cia.JPG" width="200" height="260">
+            <img src="assets/image/Cia.JPG" width="200" height="260" style="display: block; margin:auto">
           </figure>
         </header>
         <section>
-          <table>
+          <table style="text-align: left;">
             <tr>
-              <th>Nama : </th>
+              <th>Nama</th>
+              <td>:</td>
               <td>Alfrina Gracia Pramesti</td>
             </tr>
   
             <tr>
-              <th>Tempat Tanggal Lahir : </th>
+              <th>Tempat Tanggal Lahir</th>
+              <td>:</td>
               <td>Palu, 29 April 2003</td>
             </tr>
   
             <tr>
-              <th>E-mail : </th>
-              <td>alfrina.g.p@gmail.com</td>
+              <th>E-mail</th>
+              <td>:</td>
+              <td><a href ="alfrina.g.p@gmail.com">alfrina.g.p@gmail.com</a></td>
             </tr>
   
             <tr>
-              <th>WhatsApp : </th>
+              <th>WhatsApp</th>
+              <td>:</td>
               <td>082396001729</td>
             </tr>
           </table>
         </section>
+        <nav>
+          <ul>
+            <li><a href="#pendidikan">Pendidikan</a></li>
+            <li><a href="#pengalaman organisasi">Pengalaman Organisasi</a></li>
+            <li><a href="#hobi">Hobi</a></li>
+            <li><a href="#keterampilan">Keterampilan</a></li>
+          </ul>
+        </nav>
       </article>
     </aside>
   
     <main>
       <div id="content">
         <article id="pendidikan">
-          <h2>Pendidikan</h2>
+          <h2 style="background-color: #005555; padding: 5px; text-align: center;" >Pendidikan</h2>
           <p>Berikut ini Pendidikan yang di tempuh</p>
           <nav>
             <ol>
@@ -83,7 +87,7 @@
         </article>
   
         <article id="pengalaman organisasi"></article>
-        <h2>Pengalaman Organisasi</h2>
+        <h2 style="background-color: #005555; padding: 5px; text-align: center;" >Pengalaman Organisasi</h2>
         <nav>
           <ul>
             <li>
@@ -103,7 +107,7 @@
         </article>
   
         <article id="hobi">
-          <h2>Hobi</h2>
+          <h2 style="background-color: #005555; padding: 5px; text-align: center;" >Hobi</h2>
           <nav>
             <ul>
               <li>Memasak</li>
@@ -114,7 +118,7 @@
         </article>
   
         <article id="keterampilan">
-          <h2>Keterampilan</h2>
+          <h2 style="background-color: #005555; padding: 5px; text-align: center;" >Keterampilan</h2>
           <nav>
             <ul>
               <li>Teliti dalam mengerjakan dan menyelesaikan tugas yang diberikan</li>
@@ -128,7 +132,7 @@
   
       </div>
     </main>
-    <footer>
+    <footer style="background-color: #A1E3D8; padding: 10px;" >
       <p>Belajar HTML Dasar, Pemrograman Berbasis Platform</p>
     </footer>
   </body>
