Merubah element dan mengahpus dokumen style

--- a/Tugas1.html
+++ b/Tugas1.html
@@ -53,7 +53,7 @@
             <tr>
               <th>WhatsApp</th>
               <td>:</td>
-              <td>082396001729</td>
+              <td><a href ="https://wa.me/<082396001729">082396001729</a></td>
             </tr>
           </table>
         </section>
