new file:   assets/styles.css

--- a/Tugas1.html
+++ b/Tugas1.html
@@ -5,16 +5,17 @@
     <link rel="stylesheet" href="./assets/styles.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel ="stylesheet" href="assets/styles.css">
     <title>Tugas 1</title>
   </head>
-  <body style="background-color: #069A8E;">
+  <body>
     <header>
-      <img
+      <img class="tengah"
         src="assets/image/usd.png"
         width="150"
         height="150"
-        style="display: block; margin: auto"
       />
+    
       <h1 style="text-align: center">Belajar HTML Dasar</h1>
       <h2 style="text-align: center">
         Selamat datang di Universitas Sanata Dharma
@@ -31,7 +32,7 @@
           </figure>
         </header>
         <section>
-          <table style="text-align: left;">
+          <table>
             <tr>
               <th>Nama</th>
               <td>:</td>
