--- a/Tugas1.html
+++ b/Tugas1.html
@@ -24,9 +24,9 @@
     </header>
 
     <aside>
-      <article class="">
+      <article>
         <header>
-          <h2 style="background-color: #005555; padding: 5px; text-align: center;"">Biodata</h2>
+          <h2 class="atas">Biodata</h2>
           <figure>
             <img src="assets/image/Cia.JPG" width="200" height="260" style="display: block; margin:auto">
           </figure>
@@ -72,7 +72,7 @@
     <main>
       <div id="content">
         <article id="pendidikan">
-          <h2 style="background-color: #005555; padding: 5px; text-align: center;" >Pendidikan</h2>
+          <h2 class="judul">Pendidikan</h2>
           <p>Berikut ini Pendidikan yang di tempuh</p>
           <nav>
             <ol>
@@ -88,7 +88,7 @@
         </article>
   
         <article id="pengalaman organisasi"></article>
-        <h2 style="background-color: #005555; padding: 5px; text-align: center;" >Pengalaman Organisasi</h2>
+        <h2 calss="judul" >Pengalaman Organisasi</h2>
         <nav>
           <ul>
             <li>
@@ -108,7 +108,7 @@
         </article>
   
         <article id="hobi">
-          <h2 style="background-color: #005555; padding: 5px; text-align: center;" >Hobi</h2>
+          <h2 class="judul">Hobi</h2>
           <nav>
             <ul>
               <li>Memasak</li>
@@ -119,7 +119,7 @@
         </article>
   
         <article id="keterampilan">
-          <h2 style="background-color: #005555; padding: 5px; text-align: center;" >Keterampilan</h2>
+          <h2 class="judul">Keterampilan</h2>
           <nav>
             <ul>
               <li>Teliti dalam mengerjakan dan menyelesaikan tugas yang diberikan</li>
@@ -133,7 +133,7 @@
   
       </div>
     </main>
-    <footer style="background-color: #A1E3D8; padding: 10px;" >
+    <footer >
       <p>Belajar HTML Dasar, Pemrograman Berbasis Platform</p>
     </footer>
   </body>
