modified:   Tugas1.html  Untracked files: 	BootStrap/

--- a/Tugas1.html
+++ b/Tugas1.html
@@ -54,7 +54,7 @@
             <tr>
               <th>WhatsApp</th>
               <td>:</td>
-              <td><a href ="https://wa.me/<082396001729">082396001729</a></td>
+              <td><a href ="https://wa.me/082396001729">082396001729</a></td>
             </tr>
           </table>
         </section>
