--- a/BootStrap/index.html
+++ b/BootStrap/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="assets/styles.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -116,7 +116,7 @@
           <div class="col-md-6">
             <div class="card">
               <img
-                src="assets/image/volly.jpg.crdownload"
+                src="assets/image/volly.png"
                 class="card-img-top"
                 alt="VOLLEY"
               />
